[project]
name = "uap_podcast"
version = "0.1.0"
description = "Multi-agent podcast generator with Nexus, Reco, and Stat agents"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.9"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
langchain = "^0.2.0"
langgraph = "^0.0.25"
azure-cognitiveservices-speech = "^1.34.0"
openai = "^1.35.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
black = "^24.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
